# RadixPOS

./: README.md  setup.cfg
radixpos/: main.py
radixpos/views/: __init__.py  home.py  order.py  payment.py  prepare.py  settings.py  view.py
