[metadata]
name = radix-pos
version = 0.1.0
url = https://github.com/glyzinieh/RadixPOS
author = glyzinieh
author_email = wisteriatp@gmail.com
description = A general-purpose POS system on cloud.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    flet

[options.entry_points]
console_scripts =
    radix-pos = radix_pos:run
